<resources>
    <string name="app_name">BCB Reader</string>
    <string name="dummy_chapter_title">Very long dummy title</string>
    <string name="dummy_chapter_description">A detailed description of the chapter</string>
    <string name="title_activity_chapter_reading">Chapter</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_commentary">Debug: this is some medium-length commentary for the dummy page. Just look at dem cats.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notification_on_update">Notify me about comic updates</string>

    <string name="pref_title_notification_sound">Notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_enable_telemetry">Send telemetry to developer</string>
    <string name="pref_title_telemetry_model">Device model</string>
    <string name="pref_title_telemetry_ram">RAM</string>
    <string name="pref_title_telemetry_android_version">Android version</string>
    <string name="pref_title_telemetry_storage">Internal storage</string>
    <string name="pref_title_telemetry_sdcard">SD card</string>
    <string name="pref_title_about_version">App version name</string>
    <string name="app_version">Kindergarten</string>
    <string name="pref_title_volley_license">Volley license</string>
    <string name="pref_summary_volley_license">This app uses the Volley library. Tap to view its license.</string>
    <string name="pref_title_gson_license">GSON license</string>
    <string name="pref_summary_gson_license">This app uses the GSON library. Tap to view its license.</string>
    <string name="pref_title_dbflow_license">DBFlow license</string>
    <string name="pref_summary_dbflow_license">This app uses the DBFlow library. Tap to view its license.</string>
    <string name="pref_header_telemetry">Telemetry</string>
    <string name="pref_title_telemetry_sdcard_emulated">SD card is emulated</string>
    <string name="content_description_header">Header</string>
    <string name="added_to_favourites">Chapter added to favourites</string>
    <string name="removed_from_favourites">Chapter removed from favourites</string>
    <string name="undo">Undo</string>
    <string name="update_check_failed">Failed to check for updates. Check your network connection.</string>
    <string name="retry">Retry</string>
    <string name="chapter_list_download_failed">Couldn\'t download chapter list! Check your network connection</string>

    <string name="notification_title">BCB updated</string>
    <string name="notification_description">Read the latest page!</string>
    <string name="pref_header_reading">Reading</string>
    <string name="pref_header_about">About</string>
    <string name="pref_title_reading_quality">Page quality</string>
    <string name="pref_title_telemetry_unique_identifier">Unique identifier for this device</string>
    <string name="pref_title_telemetry_send_manually">Send telemetry manually</string>
    <string name="title_license">Licence</string>
    <string name="thank_you_for_sending_telemetry">Thank you for sending telemetry!</string>
    <string name="error_sending_telemetry">Error sending telemetry</string>

    <string name="title_activity_fullscreen_reader">Read this BCB chapter</string>
    <string name="go_fullscreen">Full screen</string>
    <string name="pref_title_enable_preloading">Enable preloading</string>
    <string name="pref_summary_preloading">Preloading allows a smoother experience but increases data usage</string>
    <string name="pref_title_use_cdn">Use quick servers</string>
    <string name="pref_summary_use_cdn">Try toggling this preference if pages load slowly</string>
    <string name="share">Share</string>
    <string name="error_while_sharing">Something went wrong while sharing: %1$s</string>
    <string name="title_chapter_title_page_number">%1$s, page %2$d</string>
    <string name="pref_title_share_upload_image">Share image files</string>
    <string name="pref_summary_share_upload_image">Also add image files when sharing a page using another app</string>
    <string name="go_to_latest_update">The comic just updated! Do you want to see the latest page?</string>
    <string name="go">Go</string>
    <string name="sort_chapters">Sorting method</string>
    <string name="ascending">Sort chapters old to new</string>
    <string name="descending">Sort chapters new to old</string>
    <string name="pref_title_sort_descending">Sort chapters new to old</string>
    <string name="pref_summary_sort_descending">Useful after reading through the archive so you can see the latest pages quicker!</string>
    <string name="pref_summary_on_sort_descending">The latest chapters appear in the top of the list.</string>
    <string name="pref_summary_off_sort_descending">The oldest chapters appear in the top of the list.</string>
    <string name="loading">Loading…</string>
    <string name="test_notification">Debug</string>
    <string name="pref_title_notification_recent_page_notifier_max_time">New page reminder time</string>
    <string name="pref_summary_notification_recent_page_notifier_max_time">How many hours to show the \"the comic just updated\" banner</string>
    <string name="latest_update">Latest page</string>
    <string name="shortcut_latest_page_short">Latest page</string>
    <string name="shortcut_latest_page_long">Open the latest Bittersweet Candy Bowl page</string>
    <string name="title_commentary">Author commentary</string>
    <string name="pref_summary_show_commentary">Show author commentary above the navigation controls while reading</string>
    <string name="pref_summary_off_show_commentary">Not showing author commentary above the navigation controls while reading</string>
    <string name="pref_summary_on_show_commentary">Showing author commentary above the navigation controls while reading</string>
    <string name="pref_title_show_commentary">Show author commentary</string>
    <string name="continue_reading">Continue reading</string>
    <string name="update_check_failed_hackers_on_the_loose">Your connection is being intercepted! You are likely being attacked by hackers!</string>
    <string name="crash_dialog_title">Send crash report</string>
    <string name="confirm_send_crash_report">The app has found unsent crash reports! Would you like to send these report so the cause of the crashes can be fixed?</string>
    <string name="send_crash_reports">Send reports</string>
    <string name="dont_send_crash_reports">Delete reports</string>
    <string name="dummy_page_number">Page 1</string>
    <string name="page_number">Page %1$d</string>
    <string name="chapter_title_big">Chapter %1$s: %2$s</string>
    <string name="no_commentary_available"><![CDATA[<p>Commentary not (yet) available for this page.</p>]]></string>
    <string name="title_activity_bcilogin">Log in to BCI</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">E-mail</string>
    <string name="pref_summary_jsoup_license">This app uses jsoup. Tap to view its license.</string>
    <string name="pref_title_jsoup_license">JSoup License</string>
    <string name="permission_rationale">Contact information is required to autofill these fields</string>
    <string name="error_invalid_password">That didn\'t work! Check your password and try again.</string>
    <string name="error_field_required">This is a required field.</string>
    <string name="error_invalid_username">Invalid username address!</string>
    <string name="error_incorrect_password">That didn\'t work! Check your password and try again.</string>
    <string name="bci_comics">BCI comics</string>
</resources>
