<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_reading_quality_titles"
        android:entryValues="@array/pref_reading_quality_values"
        android:key="reading_quality"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_reading_quality" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="reading_enable_preloading"
        android:summary="@string/pref_summary_preloading"
        android:title="@string/pref_title_enable_preloading" />

    <!-- TODO: remove this preference in production -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="reading_use_cdn"
        android:summary="@string/pref_summary_use_cdn"
        android:title="@string/pref_title_use_cdn" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="share_upload_image"
        android:persistent="false"
        android:summary="@string/pref_summary_share_upload_image"
        android:title="@string/pref_title_share_upload_image" />

    <!-- This cal also be toggled from the toolbar in the chapter list -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="chapter_sort_descending"
        android:summary="@string/pref_summary_sort_descending"
        android:summaryOff="@string/pref_summary_off_sort_descending"
        android:summaryOn="@string/pref_summary_on_sort_descending"
        android:title="@string/pref_title_sort_descending" />
</PreferenceScreen>