<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="nl.jeroenhd.app.bcbreader.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="nl.jeroenhd.app.bcbreader.SettingsActivity$ReadingPreferenceFragment"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/pref_header_reading"/>

    <header
        android:fragment="nl.jeroenhd.app.bcbreader.SettingsActivity$TelemetryPreferenceFragment"
        android:icon="@drawable/ic_memory_black_24dp"
        android:title="@string/pref_header_telemetry"/>

    <header
        android:fragment="nl.jeroenhd.app.bcbreader.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_about"/>
</preference-headers>
