<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="false"
    android:theme="@style/FullscreenTheme"
    android:transitionName="entireView"
    tools:context="nl.jeroenhd.app.bcbreader.activities.FullscreenReaderActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:transitionName="title"
        android:visibility="visible"
        app:navigationIcon="?homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/dummy_chapter_title"
        app:titleTextAppearance="@style/ToolbarText"
        app:titleTextColor="@android:color/white" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:clipToPadding="true"
        android:elevation="@dimen/elevation_toolbar"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/authorCommentaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/title_commentary"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/commentary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/authorCommentaryTextView"
                android:text="@string/dummy_commentary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_left"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/commentary"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/ic_chevron_left_accent_24dp"
                android:drawableStart="@drawable/ic_chevron_left_accent_24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_right"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/commentary"
                android:background="@android:color/white"
                android:drawableEnd="@drawable/ic_chevron_right_accent_24dp"
                android:drawableRight="@drawable/ic_chevron_right_accent_24dp" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignBottom="@id/button_left"
                android:layout_alignTop="@id/button_left"
                android:layout_below="@id/commentary"
                android:layout_toEndOf="@id/button_left"
                android:layout_toLeftOf="@id/button_right"
                android:layout_toRightOf="@id/button_left"
                android:layout_toStartOf="@id/button_right" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
